@@ -1,3 +1,7 @@
+2014-01-12  Marc Glisse  <marc.glisse@inria.fr>
+
+	* demos/expr/expr.h: Add extern "C" for C++.
+
 2014-01-11  Torbjorn Granlund  <tege@gmplib.org>
 
 	* doc/gmp.texi (Notes for Particular Systems): Add items about old
